--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citas Célebres</title>
 
-    <!-- Fuentes -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Fuente Montserrat Black -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>CITAS CÉLEBRES</h1>
+        <h1>Citas Célebres</h1>
         <p id="cita-del-dia"></p>
     </header>
 
@@ -31,7 +31,7 @@
     <main id="contenido"></main>
 
     <footer>
-        <p>© 2025 Citas Célebres • Propiedad de Ángel Bitrián</p>
+        <p>© 2025 Citas Célebres • Ángel Bitrián</p>
     </footer>
 
     <script src="script.js"></script>
