--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
         <p>© 2025 Citas Célebres • Ángel Bitrián</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
-
-
